[gd_scene load_steps=25 format=3 uid="uid://xcjrjq5cbn7y"]

[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1_2v3wm"]
[ext_resource type="Texture2D" uid="uid://vwob30tkwej4" path="res://addons/kenney_particle_pack/star_06.png" id="3_27dhu"]
[ext_resource type="AudioStream" uid="uid://cyp0dip0hu5qd" path="res://audio/gunshot.ogg" id="4_56v1d"]
[ext_resource type="PackedScene" uid="uid://vddlijukgt4w" path="res://models/man.glb" id="5_gc3jb"]
[ext_resource type="PackedScene" uid="uid://cbfh13w0xw7gi" path="res://models/futuristicpistol-complete.blend" id="5_ikpur"]
[ext_resource type="PackedScene" uid="uid://q531qdb3m0yw" path="res://Scenes/Guns/riflecomplete.tscn" id="7_hb2iv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_67y6s"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xk8km"]

[sub_resource type="Animation" id="Animation_68i2q"]
length = 0.001
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("riflecomplete")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, -0.299262, -0.352646, 0.871799)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("riflecomplete")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("riflecomplete:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.00581, 1.29541, -1.6763), Vector3(-1.00581, 1.29541, -1.6763)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("riflecomplete:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.001),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.204885, -0.349671, 1.00027), Vector3(-0.323334, -0.389822, 0.861007)]
}

[sub_resource type="Animation" id="Animation_6eeri"]
resource_name = "idle"
loop_mode = 1
step = 2.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("riflecomplete")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.1, 1, 0, 0.0200448, 0, 0.656667, 1, 0, 0.0767059, 0)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("riflecomplete")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0.1, 1, 0, 0, 0, 1, 0.663433, 1, 0, 0, 0, 1, 0.673333, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_xiy3f"]
resource_name = "move"
loop_mode = 1
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("riflecomplete")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0.0666667, 1, -0.00433853, 0.0413296, 0, 0.266667, 1, 0.0947214, 0.185401, 0, 0.5, 1, -0.0422634, 0.0895565, -0.0647498, 0.7, 1, -0.154636, 0.129714, -0.0215833, 0.866667, 1, -0.154942, 0.14377, -0.0419586)
tracks/1/type = "rotation_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("riflecomplete")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array()

[sub_resource type="Animation" id="Animation_rs2ly"]
resource_name = "shoot"
length = 0.1
loop_mode = 2
step = 0.2
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("riflecomplete")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(-0.01, 1, 0, 0.0200448, 0.117462, 0.08, 1, 0, 0.0200448, -0.0483531)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pav85"]
_data = {
"RESET": SubResource("Animation_68i2q"),
"idle": SubResource("Animation_6eeri"),
"move": SubResource("Animation_xiy3f"),
"shoot": SubResource("Animation_rs2ly")
}

[sub_resource type="Gradient" id="Gradient_cfnn0"]
offsets = PackedFloat32Array(0, 0.141221, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ca30p"]
gradient = SubResource("Gradient_cfnn0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uu53b"]
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_ca30p")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_flg34"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.960784, 0.670588, 1)
albedo_texture = ExtResource("3_27dhu")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_b2g4i"]
material = SubResource("StandardMaterial3D_flg34")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="Animation" id="Animation_jhgv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.1394, 2.52446, 2.25795)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.0160332, 2.92707, 0.0545053)]
}

[sub_resource type="Animation" id="Animation_knepc"]
resource_name = "idle"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.240036, 2.97831, -0.209825)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.19706, 2.4228, 2.14192)]
}

[sub_resource type="Animation" id="Animation_qcgne"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.300754, -0.339554, -0.478369), Vector3(0.361002, -0.281665, -0.478369), Vector3(0.300754, -0.339554, -0.478369), Vector3(0.222531, -0.307603, -0.478369)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.0245917, 0, 0), Vector3(-0.0245917, 0, 0), Vector3(-0.0245917, 0, 0), Vector3(-0.0245917, 0, 0)]
}

[sub_resource type="Animation" id="Animation_efeb8"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.785398, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6wdk"]
_data = {
"RESET": SubResource("Animation_jhgv2"),
"idle": SubResource("Animation_knepc"),
"move": SubResource("Animation_qcgne"),
"shoot": SubResource("Animation_efeb8")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hn37q"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_2v3wm")
standing_height = 2.15

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 1, 0)
shape = SubResource("CapsuleShape3D_67y6s")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_xk8km")

[node name="weapon_holder" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.287798, 1.13315, -0.578018)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4161, -0.130484)

[node name="bulletSpawn" type="Node3D" parent="Camera3D"]
transform = Transform3D(0.999903, 7.31055e-05, 0.013962, 0, 0.999986, -0.00523596, -0.0139622, 0.00523545, 0.999889, 0.360464, -0.200336, -0.917432)

[node name="AmmoCounter" type="Label" parent="Camera3D"]
anchors_preset = -1
anchor_left = 0.961264
anchor_top = 0.003
anchor_right = 0.997
anchor_bottom = 0.039
offset_left = -0.376099
offset_top = 0.056
offset_right = 0.455933
offset_bottom = -0.272001
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="man" parent="Camera3D" instance=ExtResource("5_gc3jb")]
transform = Transform3D(-0.0994226, 0, -0.0107305, 0, 0.1, 0, 0.0107305, 0, -0.0994226, 0.248522, -1.88805, 0.104838)

[node name="Armature" parent="Camera3D/man" index="0"]
transform = Transform3D(-0.859548, 0.511055, 0, -0.511055, -0.859548, 0, 0, 0, 1, 1.40149, 16.4226, -0.771757)

[node name="Skeleton3D" parent="Camera3D/man/Armature" index="0"]
bones/0/position = Vector3(0.081903, -0.374712, 1.78721)
bones/0/rotation = Quaternion(0.669523, -0.148151, -0.170817, 0.707539)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(-0.0438387, -0.25868, -0.313499, 0.912623)
bones/2/rotation = Quaternion(-0.0378221, 0.0177347, 0.176509, 0.983412)
bones/3/rotation = Quaternion(0.643419, 0.20943, -0.200923, 0.708365)
bones/4/rotation = Quaternion(-0.486261, 0.166804, -0.0273775, 0.857308)
bones/5/rotation = Quaternion(-0.117794, 0.0216345, 0.161724, 0.979542)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(0.160177, 0.00393901, -0.143213, 0.976636)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.844169, -0.286708, -0.225466, 0.392864)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(-0.0236912, 0.0357208, -0.118205, 0.992064)
bones/9/rotation = Quaternion(-0.199076, -0.209608, -0.818015, 0.497277)
bones/10/rotation = Quaternion(-0.276156, 0.0827239, -0.123557, 0.949541)
bones/11/rotation = Quaternion(0.240287, -0.00196043, -0.0539616, 0.969199)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.312121, -0.344438, -0.854987, 0.230089)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(-0.46103, 0.121266, -0.17314, 0.86184)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.847478, 0.272675, -0.342294, 0.300441)
bones/15/rotation = Quaternion(0.0319547, -0.000981492, 0.0297175, 0.999047)
bones/16/position = Vector3(3.79975, -1.89758, -0.642434)
bones/16/rotation = Quaternion(0.64883, -0.135607, -0.277572, 0.695402)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.202111, 0.0141867, 0.232908, 0.951159)
bones/18/rotation = Quaternion(0.0344899, -0.0570093, 0.0176533, 0.997622)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.0950629, -0.252354, 0.667305, 0.694251)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(-0.464298, -0.301975, -0.370772, 0.745497)
bones/21/rotation = Quaternion(-0.475173, -0.0108344, -0.0837134, 0.875834)
bones/22/rotation = Quaternion(-0.0400283, 0.210915, 0.116467, 0.969715)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(-0.266959, -0.0326961, 0.877902, 0.396172)
bones/24/rotation = Quaternion(-0.0847841, -0.194535, 0.121386, 0.969656)
bones/25/rotation = Quaternion(0.135707, -0.220605, 0.785618, 0.561891)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(-0.305323, -0.358356, 0.201639, 0.858895)
bones/27/rotation = Quaternion(0.408793, 0.136698, 0.164413, 0.887227)
bones/28/rotation = Quaternion(0.232198, -0.175233, 0.715838, 0.634786)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(-0.248318, -0.515043, 0.431873, 0.697535)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(0.35879, 0.636575, -0.0458905, 0.681129)
bones/30/scale = Vector3(1, 1, 1)
bones/31/rotation = Quaternion(-0.194935, 0.00585267, 0.848797, 0.491436)
bones/31/scale = Vector3(1, 1, 1)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Camera3D/man/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.556935, 0.425347, -0.713375, -0.795479, 0.0261962, -0.605415, -0.238824, 0.904651, 0.352944, 1.37822, -0.908852, 6.32747)
bone_name = "L.Wrist"
bone_idx = 2

[node name="Rifle" parent="Camera3D/man/Armature/Skeleton3D/BoneAttachment3D" instance=ExtResource("7_hb2iv")]
transform = Transform3D(6.76202, -3.03546, -0.648764, -4.02045, -5.10537, 0.385731, -0.849066, -1.19209e-07, -6.9933, 2.01719, -1.82895, 6.91241)
visible = false

[node name="riflecomplete" parent="Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Rifle" index="0"]
transform = Transform3D(0.0272866, 0.0124599, 0.0180331, -0.018635, -0.00197339, 0.0295609, 0.0115404, -0.0326475, 0.00509553, -0.204885, -0.349671, 1.00027)

[node name="RifleAnimationPlayer" type="AnimationPlayer" parent="Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Rifle"]
libraries = {
"": SubResource("AnimationLibrary_pav85")
}

[node name="Pistol" parent="Camera3D/man/Armature/Skeleton3D/BoneAttachment3D" instance=ExtResource("5_ikpur")]
transform = Transform3D(0.0461854, 0.0148499, 0.0120988, 0.0161622, -0.0132621, -0.0454191, -0.0102803, 0.045865, -0.0170505, -0.0160332, 2.92707, 0.0545053)

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol"]
transform = Transform3D(200, 0, 0, 0, 200, 0, 0, 0, 200, 3.31787, 33.8179, -40.8837)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_uu53b")
draw_pass_1 = SubResource("PlaneMesh_b2g4i")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Pistol"]
transform = Transform3D(200, 0, 0, 0, 200, 0, 0, 0, 200, -96.6821, 72.0505, 121.758)
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="AnimationPlayer" parent="Camera3D/man" index="2"]
autoplay = "move-Legacy Slot_001"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6wdk")
}
autoplay = "idle"
playback_default_blend_time = 0.05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_hn37q")

[node name="gunshot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_56v1d")
volume_db = -10.0
pitch_scale = 1.41

[node name="riflecomplete" parent="." instance=ExtResource("7_hb2iv")]
transform = Transform3D(0.035, 0, 0, 0, 0.035, 0, 0, 0, 0.035, 0.270865, 1.68607, -0.728051)
visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Camera3D/man"]
[editable path="Camera3D/man/Armature/Skeleton3D/BoneAttachment3D/Rifle"]
